--- a/package.json
+++ b/package.json
@@ -2,26 +2,37 @@
   "name": "note-app2",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://anelliya.github.io/note-app2/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^29.0.3",
-    "@types/node": "^18.7.21",
+    "@types/jest": "^29.1.1",
+    "@types/node": "^18.7.23",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@types/react-redux": "^7.1.24",
+    "bootstrap": "^5.2.1",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
-    "typescript": "^4.8.3",
+    "redux-persist": "^6.0.0",
+    "typescript": "^4.8.4",
+    "typescript-plugin-css-modules": "^3.4.0",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -40,5 +51,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/uuid": "^8.3.4",
+    "eslint": "^8.24.0",
+    "prettier": "^2.7.1"
   }
 }
