--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/css-modules": "^1.0.2",
     "@types/jest": "^29.1.1",
     "@types/node": "^18.7.23",
     "@types/react": "^18.0.21",
+    "@types/react-bootstrap": "^0.32.30",
     "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.24",
     "bootstrap": "^5.2.1",
