--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "homepage": "https://anelliya.github.io/note-app2/",
   "dependencies": {
+    "@headlessui/react": "^1.7.3",
+    "@heroicons/react": "^2.0.11",
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -34,7 +36,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "dev": "vite"
   },
   "eslintConfig": {
     "extends": [
@@ -56,7 +59,11 @@
   },
   "devDependencies": {
     "@types/uuid": "^8.3.4",
+    "autoprefixer": "^10.4.12",
     "eslint": "^8.24.0",
-    "prettier": "^2.7.1"
+    "postcss": "^8.4.17",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.1.8",
+    "vite": "^3.1.4"
   }
 }
